# homeworks

./: .gitmodules
homeworks/homework_1/hello_world/: hello.cpp
homeworks/homework_2/fortune_teller/: fortune_teller.cpp  main
homeworks/homework_3/guessing_game/: guessing_game.cpp  main
homeworks/homework_4/no_strings_attached/: .clang-format  CMakeLists.txt
homeworks/homework_4/no_strings_attached/examples/: CMakeLists.txt  split_strings.cpp  trim_strings.cpp
homeworks/homework_4/no_strings_attached/no_strings_attached/: CMakeLists.txt  split_string.cpp  split_string_test.cpp  string_split.h  string_trim.h  trim_string.cpp  trim_string_test.cpp
homeworks/homework_5/pixelator/: .clang-format  CMakeLists.txt
homeworks/homework_5/pixelator/examples/: CMakeLists.txt  use_ftxui.cpp  use_stb_image.cpp
homeworks/homework_5/pixelator/pixelator/: CMakeLists.txt  image.cpp  image.hpp  image_test.cpp  size.hpp  stb_image_data_view.cpp  stb_image_data_view.hpp  stb_image_data_view_test.cpp
homeworks/homeworks_1/hello_world/: hello.cpp
