add_executable(split_strings split_strings.cpp)
target_link_libraries(split_strings PUBLIC cxx_setup)
target_link_libraries(split_strings PRIVATE split_string)

add_executable(trim_strings trim_strings.cpp)
target_link_libraries(trim_strings PUBLIC cxx_setup)
target_link_libraries(trim_strings PRIVATE trim_string)
